sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var swap :Boolean
    ^