sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
var swap :Boolean
swap=true
while(swap){
	swap=false
	for(i<-0 to getNombreValeurs()-2){
		if(plusPetit(i,i+1)){
			echange(i,i+1)
			swap=true
		}
	}
}
}
